--- a/granian_server/pyproject.toml
+++ b/granian_server/pyproject.toml
@@ -1,13 +1,11 @@
 [project]
-name = "hello-robyn"
+name = "granian-server"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "blacksheep>=2.0.8",
+    "fastapi>=0.115.8",
     "granian>=1.7.6",
-    "robyn>=0.65.0",
 ]
-
-[tool.uv.workspace]
-members = ["uvc", "granian", "granian_server", "socketify_server"]
